--- a/Copy_of_Francis_Thairu_Financial_Data_Analysis.ipynb
+++ b/Copy_of_Francis_Thairu_Financial_Data_Analysis.ipynb
@@ -383,7 +383,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 426
+          "height": 406
         },
         "id": "-kkNCePjXi7c",
         "outputId": "e0964f9e-bccb-4740-f581-f055ea080003"
@@ -2503,7 +2503,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 896
+          "height": 1000
         },
         "id": "Du9NrxUnenvn",
         "outputId": "5466c88d-208a-4b2e-beb8-5ed88f39d02e"
@@ -4103,7 +4103,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 475
+          "height": 455
         },
         "id": "Yc5f3fksmJei",
         "outputId": "7422e9d6-5911-49e1-aa39-2d366d968a5f"
@@ -5623,7 +5623,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 381
+          "height": 364
         },
         "id": "4OU8C5bX9MKN",
         "outputId": "89d3e3a2-4759-4e25-e3b9-a6326a468206"
@@ -5717,8 +5717,7 @@
         "X_test = pca.transform(X_test)\n",
         "\n",
         "# Here the number of components for PCA has been set to 2. \n",
-        "# The classification results with 2 components are as shown in the output.\n",
-        "# With two principal components the classification accuracy decreases to 83.33% compared to 93.33% for 1 component."
+        "# The classification results with 2 components are as shown in the output.\n"
       ],
       "metadata": {
         "id": "UtVj5kWM9aNu"
@@ -5742,7 +5741,7 @@
         "X_train = pca.fit_transform(X_train)\n",
         "X_test = pca.transform(X_test)\n",
         "\n",
-        "# With three principal components the classification accuracy should again increase to 93.33%\n",
+        "\n",
         "classifier = RandomForestClassifier(max_depth=2, random_state=0)\n",
         "classifier.fit(X_train, y_train)"
       ],
@@ -5815,7 +5814,7 @@
       ],
       "name": "Copy of Francis Thairu Financial Data Analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPUf+RqVcYu2Hmtsxegn1Z2",
+      "authorship_tag": "ABX9TyNgED8Sadt5JRdl25uJd2yo",
       "include_colab_link": true
     },
     "kernelspec": {
